--- a/Exerscise02_3/Joe_Exercise02_3/Exercise02_3.csproj
+++ b/Exerscise02_3/Joe_Exercise02_3/Exercise02_3.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\JoesLib\JoesLib.csproj" />
+    <ProjectReference Include="..\..\Libs\JoesLib\JoesLib.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
