--- a/Exerscise02_4/Joe_Exercise02_4/Exercise02_4.csproj
+++ b/Exerscise02_4/Joe_Exercise02_4/Exercise02_4.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\JoesLib\JoesLib.csproj" />
+    <ProjectReference Include="..\..\Libs\JoesLib\JoesLib.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
