--- a/Exerscise02_5/Joe_Exercise02_5/Exercise02_5.csproj
+++ b/Exerscise02_5/Joe_Exercise02_5/Exercise02_5.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\JoesLib\JoesLib.csproj" />
+    <ProjectReference Include="..\..\Libs\JoesLib\JoesLib.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
