--- a/Exerscise02_6/Joe_Exercise02_6/Exercise02_6.csproj
+++ b/Exerscise02_6/Joe_Exercise02_6/Exercise02_6.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\JoesLib\JoesLib.csproj" />
+    <ProjectReference Include="..\..\Libs\JoesLib\JoesLib.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
