--- a/LabExam1/Joe_LabExam1/LabExam1.csproj
+++ b/LabExam1/Joe_LabExam1/LabExam1.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\JoesLib\JoesLib.csproj" />
+    <ProjectReference Include="..\..\Libs\JoesLib\JoesLib.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
