--- a/LabExam2_7/Joe_LabExam2_7/LabExam2_7.csproj
+++ b/LabExam2_7/Joe_LabExam2_7/LabExam2_7.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\JoesLib\JoesLib.csproj" />
+    <ProjectReference Include="..\..\Libs\JoesLib\JoesLib.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
